# img2brl

./: .gitignore  CMakeLists.txt  README.md  accept_language.cc  accept_language.h  config.h.in  de.po  fa.po  fr.po  git-post-update-hook  git-post-update.hook  hu.po  img2brl.cc  img2brl.css  img2brl.pot  it.po  refresh-translations  test.cc  ubrl.cc  ubrl.h
src/: accept_language.h  config.h.in  img2brl.cc  test.cc  ubrl.cc  ubrl.h
translation/: CMakeLists.txt  de.po  es.po  fa.po  fr.po  hu.po  img2brl.pot  it.po  update
xul/: chrome.manifest  install.rdf
xul/content/: browserOverlay.xul  img2brl.js  img2brl.properties
xul/locale/en-US/: browserOverlay.dtd
